--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "restful"
     ],
     "scripts": {
-        "test": "mocha *"
+        "test": "mocha tests"
     },
     "homepage": "https://github.com/mirodil/mongo-restify",
     "repository": {
