--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "mongoose": "*",
     "should": "*",
     "mocha": "*",
+    "express": "4.2.0",
+    "body-parser": "1.0.2",
+    "cookie-parser": "1.0.1",
+    "debug": "0.7.4",
+    "morgan": "1.0.1",
     "supertest": "*"
   }
 }
