--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test": "mocha tests"
   },
   "dependencies": {
-    "lodash": "*",
-    "bluebird": "*"
+    "bluebird": "*",
+    "lodash": "^3.8.0"
   },
   "devDependencies": {
     "mongoose": "*",
